Java: Core: format tests